<resources>
    <string name="app_name">Negyek</string>
    <string name="action_settings">Settings</string>

    <string name="input">Input</string>
    <string name="usage">Usage</string>
    <string name="usage_ex">e.g. Google</string>
    <string name="user">User</string>
    <string name="user_ex">e.g. OdinOxin</string>
    <string name="password">Password</string>
    <string name="password_ex">e.g. *****</string>
    <string name="length">Length</string>
    <string name="year">Year</string>

    <string name="alphabet">Alphabet</string>

    <string name="output">Output</string>

    <string name="parenthesis_angular_toleft">&lt;</string>
    <string name="parenthesis_angular_toright">&gt;</string>

    <string name="err_invalid_value">Invalid value!</string>
</resources>
